dependencies showed in table

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "democli",
+  "name": "@karan1798/democli",
   "version": "1.0.0",
   "description": "",
   "main": "bin/index.js",
@@ -12,6 +12,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.27.2"
+    "axios": "^0.27.2",
+    "express": "^4.18.1",
+    "nodemailer": "^6.7.7"
   }
 }
